--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ljuboandtedi.fridger.MainActivity">
+    tools:context="ljuboandtedi.fridger.MainActivity"
+    android:background="@drawable/background_pale">
 
     <TextView
         android:layout_width="match_parent"
