--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -9,7 +9,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="ljuboandtedi.fridger.WelcomeActivity">
+    tools:context="ljuboandtedi.fridger.WelcomeActivity"
+    android:background="@drawable/background_welcome">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:id="@+id/logo"/>
 
     <TextView
         android:layout_width="match_parent"
