--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,5 +68,12 @@
         android:text="Meal Info"
         android:id="@+id/main_mealInfoButton"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Profile"
+        android:id="@+id/main_profile_button"/>
+
 
 </LinearLayout>
