--- a/app/src/main/res/layout/activity_show_meal.xml
+++ b/app/src/main/res/layout/activity_show_meal.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="200dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -17,10 +17,10 @@
         android:layout_weight="1">
 
         <ImageView
-            android:layout_width="0dp"
+            android:layout_width="159dp"
             android:id="@+id/showMeals_meal_picture"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="0.38" />
 
         <LinearLayout
             android:orientation="vertical"
@@ -37,7 +37,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_weight="1.09"
                 android:id="@+id/showMeals_recipeName"/>
 
 
