--- a/app/src/main/res/layout/activity_your_ingredients.xml
+++ b/app/src/main/res/layout/activity_your_ingredients.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ljuboandtedi.fridger.YourIngredientsActivity">
+    tools:context="ljuboandtedi.fridger.activties.YourIngredientsActivity">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
