--- a/app/src/main/res/layout/activity_basic.xml
+++ b/app/src/main/res/layout/activity_basic.xml
@@ -8,5 +8,5 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ljuboandtedi.fridger.BasicActivity">
+    tools:context="ljuboandtedi.fridger.activties.BasicActivity">
 </RelativeLayout>
