--- a/app/src/main/res/layout/activity_show_meal.xml
+++ b/app/src/main/res/layout/activity_show_meal.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="ljuboandtedi.fridger.MainActivity">
+    tools:context="ljuboandtedi.fridger.activties.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
