--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="ljuboandtedi.fridger.WelcomeActivity"
+    tools:context="ljuboandtedi.fridger.activties.WelcomeActivity"
     android:background="@drawable/background_welcome">
 
     <ImageView
