Added 3 activies(Favourite Meals, Your Fridge, Shopping List) working properly, added 3 new Adapters for recycle views. Meal replaced by Recipe entirely, no more usage of meal api request to recipe id.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,24 @@
                 android:layout_gravity="center"
                 android:text="Meal Info"
                 android:id="@+id/main_mealInfoButton"/>
-
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Fav meals"
+                android:id="@+id/main_favMealsButton"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Shopping List"
+                android:id="@+id/main_shopListButton"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="FridgeProducts"
+                android:id="@+id/main_fridgeButton"/>
         </LinearLayout>
     </FrameLayout>
 </RelativeLayout>
