--- a/app/src/main/res/layout/activity_your_fridge.xml
+++ b/app/src/main/res/layout/activity_your_fridge.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_your_ingredients"
+    android:id="@+id/activity_your_fridge"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ljuboandtedi.fridger.activties.ShoppingListActivity">
+    tools:context="ljuboandtedi.fridger.activties.YourFridgeActivity">
     <TextView
+        android:gravity="center"
+        android:textSize="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:gravity="center"
-        android:text="You need to buy these ingredients..."
-        android:textSize="30sp"/>
+        android:text="Your Fridgeeeeee"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:id="@+id/yourIngredients_addToFridgeButton"
-        android:text="Buy selected"/>
+        android:id="@+id/fridge_removeButton"
+        android:textAllCaps="false"
+        android:text="Eat selected"/>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/recycleListForIngredients">
-
     </android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
