--- a/app/src/main/res/layout/activity_search_meals.xml
+++ b/app/src/main/res/layout/activity_search_meals.xml
@@ -1,153 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_search_meals"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ljuboandtedi.fridger.activties.SearchMealsActivity">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_weight="0.5"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="horizontal">
-        <Spinner
-            android:id="@+id/courseSpinner"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent">
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"/>
 
-        </Spinner>
-        <Spinner
-            android:id="@+id/holidaySpinner"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent">
-        </Spinner>
-    </LinearLayout>
-
-    <LinearLayout
+    <FrameLayout
+        android:layout_below="@id/toolbar"
+        android:id="@+id/frame_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:layout_weight="3">
-        <LinearLayout
+        android:layout_height="match_parent">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/activity_search_meals"
             android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:layout_height="0dp">
-            <TextView
-                android:layout_width="0dp"
-                android:text="Sweet"
-                android:textSize="15sp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            tools:context="ljuboandtedi.fridger.activties.SearchMealsActivity">
 
-            <SeekBar
-                android:max="100"
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:layout_height="0dp">
-            <TextView
-                android:layout_width="0dp"
-                android:text="Sweet"
-                android:textSize="15sp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:layout_height="match_parent" />
+            <LinearLayout
+                android:layout_weight="0.5"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="horizontal">
+                <Spinner
+                    android:id="@+id/courseSpinner"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent">
 
-            <SeekBar
-                android:max="100"
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:layout_height="0dp">
-            <TextView
-                android:layout_width="0dp"
-                android:text="Sweet"
-                android:textSize="15sp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:layout_height="match_parent" />
+                </Spinner>
+                <Spinner
+                    android:id="@+id/holidaySpinner"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent">
+                </Spinner>
+            </LinearLayout>
 
-            <SeekBar
-                android:max="100"
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:layout_height="0dp">
-            <TextView
-                android:layout_width="0dp"
-                android:text="Sweet"
-                android:textSize="15sp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:layout_height="match_parent" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_weight="3">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:layout_height="0dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:text="Sweet"
+                        android:textSize="15sp"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent" />
 
-            <SeekBar
-                android:max="100"
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:layout_height="0dp">
-            <TextView
-                android:layout_width="0dp"
-                android:text="Sweet"
-                android:textSize="15sp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:layout_height="match_parent" />
+                    <SeekBar
+                        android:max="100"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:layout_height="0dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:text="Sweet"
+                        android:textSize="15sp"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent" />
 
-            <SeekBar
-                android:max="100"
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="match_parent" />
+                    <SeekBar
+                        android:max="100"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:layout_height="0dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:text="Sweet"
+                        android:textSize="15sp"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent" />
+
+                    <SeekBar
+                        android:max="100"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:layout_height="0dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:text="Sweet"
+                        android:textSize="15sp"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent" />
+
+                    <SeekBar
+                        android:max="100"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:layout_height="0dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:text="Sweet"
+                        android:textSize="15sp"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent" />
+
+                    <SeekBar
+                        android:max="100"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_weight="1"
+                    android:layout_height="0dp">
+                    <EditText
+                        android:layout_width="0dp"
+                        android:id="@+id/seachMeals_mealToSearch"
+                        android:layout_weight="3"
+                        android:hint="What meal do you need?"
+                        android:layout_height="match_parent" />
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_weight="1.3"
+                        android:id="@+id/searchMeal_SearchButton"
+                        android:text="Search"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:layout_height="0dp">
-            <EditText
-                android:layout_width="0dp"
-                android:id="@+id/seachMeals_mealToSearch"
-                android:layout_weight="3"
-                android:hint="What meal do you need?"
-                android:layout_height="match_parent" />
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="1.3"
-                android:id="@+id/searchMeal_SearchButton"
-                android:text="Search"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
+
+    </FrameLayout>
+</RelativeLayout>
