--- a/app/src/main/res/layout/activity_searchpic.xml
+++ b/app/src/main/res/layout/activity_searchpic.xml
@@ -7,7 +7,7 @@
 
     app:cardBackgroundColor="#43005eff">
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -29,5 +29,5 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true" />
 
-    </RelativeLayout>
+    </FrameLayout>
 </android.support.v7.widget.CardView>
