--- a/app/src/main/res/layout/activity_favourite_meals.xml
+++ b/app/src/main/res/layout/activity_favourite_meals.xml
@@ -25,7 +25,8 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            tools:context="ljuboandtedi.fridger.activties.FavouriteMealsActivity">
+            tools:context="ljuboandtedi.fridger.activties.FavouriteMealsActivity"
+            android:background="@drawable/background_pale">
 
         </LinearLayout>
     </FrameLayout>
