--- a/app/src/main/res/layout/activity_recipe_info.xml
+++ b/app/src/main/res/layout/activity_recipe_info.xml
@@ -18,7 +18,8 @@
         <FrameLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent"
+            android:background="@drawable/background_pale">
             <ImageView
                 android:id="@+id/recipe_info_Image"
                 android:layout_height="fill_parent"
