--- a/app/src/main/res/layout/activity_recyclelist.xml
+++ b/app/src/main/res/layout/activity_recyclelist.xml
@@ -17,7 +17,8 @@
         android:layout_height="match_parent">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical" android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/background_pale">
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
