--- a/app/src/main/res/layout/activity_search_meals.xml
+++ b/app/src/main/res/layout/activity_search_meals.xml
@@ -25,7 +25,8 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            tools:context="ljuboandtedi.fridger.activties.SearchMealsActivity">
+            tools:context="ljuboandtedi.fridger.activties.SearchMealsActivity"
+            android:background="@drawable/background_pale">
 
             <LinearLayout
                 android:layout_weight="0.5"
