--- a/app/src/main/res/layout/activity_your_fridge.xml
+++ b/app/src/main/res/layout/activity_your_fridge.xml
@@ -25,7 +25,8 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            tools:context="ljuboandtedi.fridger.activties.YourFridgeActivity">
+            tools:context="ljuboandtedi.fridger.activties.YourFridgeActivity"
+            android:background="@drawable/background_pale">
             <TextView
                 android:gravity="center"
                 android:textSize="20sp"
