--- a/app/src/main/res/layout/activity_your_ingredients.xml
+++ b/app/src/main/res/layout/activity_your_ingredients.xml
@@ -25,7 +25,8 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            tools:context="ljuboandtedi.fridger.activties.ShoppingListActivity">
+            tools:context="ljuboandtedi.fridger.activties.ShoppingListActivity"
+            android:background="@drawable/background_pale">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
