--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -28,6 +29,7 @@
             android:orientation="vertical"
             tools:context="ljuboandtedi.fridger.activties.MainActivity"
             android:background="@drawable/background_pale">
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
