--- a/app/src/main/res/layout/activity_searchpic.xml
+++ b/app/src/main/res/layout/activity_searchpic.xml
@@ -3,31 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
     android:layout_width="fill_parent"
-    android:layout_height="250dp"
+    android:layout_height="350dp"
 
     app:cardBackgroundColor="#43005eff">
 
-    <FrameLayout
+    <RelativeLayout
+        android:id="@+id/relativelayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-        <TextView
-            android:id="@+id/searchpic_NameOfTheRecipe"
-            android:text="BLALBA"
-            android:textColor="@color/md_white_1000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            />
+        android:layout_height="match_parent" >
 
         <ImageView
             android:id="@+id/searchpic_Image"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="fitXY"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            />
 
-    </FrameLayout>
+        <TextView
+            android:id="@+id/searchpic_NameOfTheRecipe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:background="@color/md_black_1000"
+            android:layout_gravity="bottom"
+            android:layout_alignParentBottom="true"
+            android:text="Hello"
+            android:textColor="@color/md_white_1000" />
+
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
