--- a/app/src/main/res/layout/activity_search_meals.xml
+++ b/app/src/main/res/layout/activity_search_meals.xml
@@ -12,10 +12,11 @@
         android:background="?attr/colorPrimary"/>
 
     <FrameLayout
-        android:layout_below="@id/toolbar"
         android:id="@+id/frame_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/activity_search_meals"
