--- a/app/src/main/res/layout/activity_searchpic.xml
+++ b/app/src/main/res/layout/activity_searchpic.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
     android:layout_width="fill_parent"
-    android:layout_height="350dp"
+    android:layout_height="300dp"
 
     app:cardBackgroundColor="#43005eff">
 
@@ -24,11 +24,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:background="@color/md_black_1000"
             android:layout_gravity="bottom"
             android:layout_alignParentBottom="true"
             android:text="Hello"
+
+            android:lines="1"
             android:textColor="@color/md_white_1000" />
+
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
