--- a/app/src/main/res/layout/activity_recipe_info.xml
+++ b/app/src/main/res/layout/activity_recipe_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,8 +14,9 @@
     <FrameLayout
         android:layout_below="@id/toolbar"
         android:id="@+id/frame_container"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp">
         <FrameLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
@@ -22,8 +24,8 @@
             android:background="@drawable/background_pale">
             <ImageView
                 android:id="@+id/recipe_info_Image"
-                android:layout_height="fill_parent"
-                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
                 android:scaleType="fitXY">
             </ImageView>
             <LinearLayout
@@ -40,40 +42,126 @@
                     android:id="@+id/recipe_info_Calories"/>
                 <TextView
                     android:textColor="@android:color/white"
-
-                    android:gravity="center"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:id="@+id/recipe_info_Servings"/>
-                <TextView
-                    android:textColor="@android:color/white"
-
                     android:gravity="center"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:id="@+id/recipe_info_Ingredients"/>
+                <TextView
+
+                    android:textColor="@android:color/white"
+                    android:gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:id="@+id/recipe_info_TotalTime"/>
 
             </LinearLayout>
-
             <CheckBox
-                android:textColor="@android:color/white"
-                android:text="Favourite"
-                android:textSize="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/recipe_info_FavouriteButton" />
 
-            <Button
-                android:text="Add to ShoppingList"
-                android:layout_gravity="right"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/recipe_info_addToShopList"
-                 />
-
         </FrameLayout>
 
+
     </FrameLayout>
-</RelativeLayout>
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_height="0dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_weight="1.6"
+            android:layout_height="0dp">
+            <TextView
+                android:gravity="center"
+                android:background="@color/md_grey_100"
+                android:text="Ingredients"
+                android:textColor="@color/md_black_1000"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:text=" ITB:"
+                android:gravity="center_horizontal"
+                android:background="@color/md_grey_100"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:id="@+id/recipe_info_itemsToBeBought" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:background="@color/md_grey_100"
+                    android:id="@+id/recipe_info_servingsForTheIngredients"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1.3"
+                    android:gravity="center"
+                    android:layout_height="0dp" />
+
+                <TextView
+                    android:background="@color/md_grey_100"
+                    android:text="Servings"
+                    android:textSize="8sp"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="0dp"
+                    android:id="@+id/textView3" />
+            </LinearLayout>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_weight="4"
+            android:orientation="vertical"
+            android:layout_height="0dp">
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="buy all"
+                android:id="@+id/recipe_info_buyALlButton"
+                android:layout_weight="2"/>
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="3.69"
+                android:id="@+id/recycleListForIngredients">
+            </android.support.v7.widget.RecyclerView>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</ScrollView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="0.2">
+        <Button
+            android:layout_width="0dp"
+            android:text="All Nutritions"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+        <Button
+            android:text="View Directions"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+</LinearLayout>
